# metacoq

./: .gitignore  dune-project
checker/theories/: Closed.v  Substitution.v  Typing.v  TypingWf.v  Weakening.v
erasure/src/: metacoq_erasure_plugin.mlpack  pCUICInduction.ml  pCUICInduction.mli
erasure/theories/: ErasureCorrectness.v  ErasureFunction.v
pcuic/: _CoqProject.in
pcuic/theories/: PCUICArities.v  PCUICAst.v  PCUICAstUtils.v  PCUICClosed.v  PCUICConfluence.v  PCUICContextConversion.v  PCUICContexts.v  PCUICCtxShape.v  PCUICElimination.v  PCUICLiftSubst.v  PCUICParallelReductionConfluence.v  PCUICSR.v  PCUICSafeLemmata.v  PCUICSubstitution.v  PCUICTyping.v  PCUICUniverses.v  PCUICWeakening.v  TemplateToPCUICCorrectness.v
safechecker/theories/: PCUICSafeChecker.v
template-coq/: extraction.patch
template-coq/extraction/: Extraction.v  dune
template-coq/src/: constr_denoter.ml  dune
template-coq/theories/: Ast.v  Environment.v  EnvironmentTyping.v  Loader.v  dune
